 * WML engine:
   * implemented the #ifndef directive, the opposite of #ifdef, in the
     preprocessor, to parse the following block only when the symbol is not
     defined
   * fix the recall list duplication bug (bug #10183)
   * [modify_side] can now override the recruit list, just like [set_recruit];
     should be the preferred method at some point.
 * units:
   * balancing changes:
     * increased the melee attack of the Saurian Oracle from 5-2 to 4-3
 * miscellaneous and bug fixes:
   * added some extra headers for gcc 4.3 (based on patch #842)

Version 1.3.10:
 * campaign server
   * it's now possible to delete a campaign with the master password
   * added initial support for the wescamp translation integration
     (not finished yet)
   * You can now supply a .pbl file within the directory for a campaign
     as _server.pbl, rather than externally at the same level as the directory.
     Both the client code in the game and the Python client in utils/ have been
     enhanced to allow this.
 * campaigns:
   * Eastern Invasion
     * Fixed bug #10195, related to Holy Amulet's description
     * some gold balancing for 'Xenophobia' and 'Lake Vrug'
   * Liberty
     * in 'The Raid', the accompanying peasants are no longer loyal. Also, the
       scenario now gives an early finish bonus
     * turn limits of 'A Strategy of Hope' lowered, to prevent massive amounts
       of carryover gold
   * Northern Rebirth
     * Balancing polishing and bug fixing.
     * Disabled undead branch for the upcoming 1.4 string freeze, as it is far
       from finished right now, and will not change before the string freeze.
     * Made auto recalled units loyal.
   * Sceptre of Fire
     * 'Gathering Materials' now has more varied terrain, an early finish bonus,
       and the gold and coal piles now behave better: each pile now only gives
       one load, miners carrying a load have an icon on them and when dying they
       drop their load, so another miner can pick it up