@@ -32,6 +32,7 @@ Version 1.3.10+svn:
    * fix the recall list duplication bug (bug #10183)
    * [modify_side] can now override the recruit list, just like [set_recruit];
      should be the preferred method at some point.
+   * the gold carryover can now be modified from wml (fr #10144)
  * units:
    * balancing changes:
      * increased the melee attack of the Saurian Oracle from 5-2 to 4-3
